8 channels fully functional - ATEM column disabled

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 					<td><input type="number" id="T1" name="S21" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[0]^"></td>
 					<td><input type="number" id="T1" name="S31" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[0]^"></td>
+							value="~sw3.inputNumber[0]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T2">2. Camera</label></td>
@@ -505,7 +505,7 @@
 					<td><input type="number" id="T2" name="S22" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[1]^"></td>
 					<td><input type="number" id="T2" name="S32" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[1]^"></td>
+							value="~sw3.inputNumber[1]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T3">3. Camera</label></td>
@@ -514,7 +514,7 @@
 					<td><input type="number" id="T3" name="S23" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[2]^"></td>
 					<td><input type="number" id="T3" name="S33" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[2]^"></td>
+							value="~sw3.inputNumber[2]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T4">4. Camera</label></td>
@@ -523,7 +523,7 @@
 					<td><input type="number" id="T4" name="S24" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[3]^"></td>
 					<td><input type="number" id="T4" name="S34" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[3]^"></td>
+							value="~sw3.inputNumber[3]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T5">5. Camera</label></td>
@@ -532,7 +532,7 @@
 					<td><input type="number" id="T5" name="S25" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[4]^"></td>
 					<td><input type="number" id="T5" name="S35" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[4]^"></td>
+							value="~sw3.inputNumber[4]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T6">6. Camera</label></td>
@@ -541,7 +541,7 @@
 					<td><input type="number" id="T6" name="S26" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[5]^"></td>
 					<td><input type="number" id="T6" name="S36" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[0]^"></td>
+							value="~sw3.inputNumber[5]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T7">7. Camera</label></td>
@@ -550,7 +550,7 @@
 					<td><input type="number" id="T7" name="S27" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[6]^"></td>
 					<td><input type="number" id="T7" name="S37" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[6]^"></td>
+							value="~sw3.inputNumber[6]^" disabled></td>
 				</tr>
 				<tr>
 					<td><label for="T8">8. Camera</label></td>
@@ -559,7 +559,7 @@
 					<td><input type="number" id="T8" name="S28" min="0" max="255" placeholder="vMix input number"
 							value="~sw2.inputNumber[7]^"></td>
 					<td><input type="number" id="T8" name="S38" min="0" max="255" placeholder="vMix input number"
-							value="~sw3.inputNumber[7]^"></td>
+							value="~sw3.inputNumber[7]^" disabled></td>
 				</tr>
 			</table>
 		</div>
